--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.8",
     "isort>=6.0.0",
     "openai>=1.64.0",
+    "pyaudio>=0.2.14",
     "pydantic-settings>=2.8.0",
     "pydub>=0.25.1",
     "requests>=2.32.3",
